--- a/南沙图书馆/src/assets/css/site.css
+++ b/南沙图书馆/src/assets/css/site.css
@@ -708,7 +708,13 @@ body{
     text-decoration: none;
     color: #fff;
 }
-
+.index-footer{
+    position: fixed;
+    left:0;
+    bottom: 0;
+    right: 0;
+    z-index: 100;
+}
 .footer{
     background-color: #022651;
     height: 80px;
@@ -1916,7 +1922,16 @@ body{
     text-align: center;
     bottom : 30px;
     color: #fff;
-    z-index: 10;
+    z-index: 101;
+    animation: fade 5s linear 0s infinite alternate;
+}
+@keyframes fade
+{
+    0% {opacity: 1;}
+    25% {opacity: 1;}
+    50%{opacity: 0;}
+    75%{opacity: 1;}
+    100%{opacity: 1;}
 }
 .full-page-nav{
     position: fixed;
@@ -2070,8 +2085,8 @@ body{
     overflow:hidden;
     text-overflow:ellipsis;
     white-space:nowrap;
-    height: 20px;
-    line-height: 20px;
+    height: 23px;
+    line-height: 23px;
 }
 .home-ele-rows .link li a{
     color: #fff;
